feat: OAuth Google, gestion clients admin, paramètres studio
- Ajout connexion Google OAuth
- Page détail client admin avec blacklist/suppression
- Page paramètres admin (délai annulation, liste attente, rappels)
- Ajout administrateurs depuis l'interface
- Amélioration UX header avec menu utilisateur connecté
- Correction couleur bouton "Découvrir le studio"

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,14 @@ DATABASE_URL="postgresql://user:password@localhost:5432/tempo?schema=public"
 NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET="your-secret-key-here-change-in-production"
 
+# Google OAuth (https://console.cloud.google.com/apis/credentials)
+GOOGLE_CLIENT_ID="your-google-client-id.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+
+# Apple OAuth (https://developer.apple.com) - Requires paid Apple Developer account
+APPLE_CLIENT_ID="your-apple-service-id"
+APPLE_CLIENT_SECRET="your-apple-client-secret"
+
 # Stripe
 STRIPE_SECRET_KEY="sk_test_..."
 STRIPE_PUBLISHABLE_KEY="pk_test_..."
