--- a/package.json
+++ b/package.json
@@ -14,44 +14,46 @@
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "@prisma/client": "^5.19.0",
-    "next-auth": "^5.0.0-beta.25",
     "@auth/prisma-adapter": "^2.5.0",
-    "stripe": "^17.0.0",
-    "bcryptjs": "^2.4.3",
-    "zod": "^3.23.0",
-    "date-fns": "^3.6.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.0",
-    "lucide-react": "^0.427.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@prisma/client": "^5.19.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.0",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.0",
-    "@radix-ui/react-avatar": "^1.1.0",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.427.0",
+    "nanoid": "^5.0.0",
+    "next": "^14.2.0",
+    "next-auth": "^5.0.0-beta.25",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
     "resend": "^4.0.0",
-    "nanoid": "^5.0.0"
+    "stripe": "^17.0.0",
+    "tailwind-merge": "^2.5.0",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
-    "typescript": "^5.5.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.14.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "@types/bcryptjs": "^2.4.6",
     "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.0",
     "postcss": "^8.4.40",
+    "prisma": "^5.19.0",
     "tailwindcss": "^3.4.7",
     "tailwindcss-animate": "^1.0.7",
-    "prisma": "^5.19.0",
     "tsx": "^4.16.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.0"
+    "typescript": "^5.5.0"
   }
 }
